fix: bring scrollbar left

--- a/src/css/element.scss
+++ b/src/css/element.scss
@@ -2,7 +2,7 @@
 
 // コードセル全体
 .codeCell {
-  margin: 8px;
+  margin: 8px 0px;
 }
 
 // コードセルのエディタ部分
@@ -31,5 +31,5 @@
 
 // テキストセル
 .textCell {
-  margin: 8px;
+  margin: 8px 0px;
 }
