--- a/src/css/region.scss
+++ b/src/css/region.scss
@@ -31,7 +31,7 @@
 .output {
   box-sizing: border-box;
   flex: 0 0 50%;
-  padding: 16px 16px 16px 0;
+  padding: 16px 16px 16px 8px;
   iframe {
     width: 100%;
     height: 100%;
